--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.address= 0.0.0.0
 # ===============================
 # DATASOURCE (Render PostgreSQL)
 # ===============================
-spring.datasource.url=jdbc:postgresql://dpg-d5eagjtactks73c2rfh0-a.oregon-postgres.render.com:5432/deploybox_i7z7
-spring.datasource.username=deploybox_i7z7_user
-spring.datasource.password=xPClSQpfK2Jg8qxJyyrmoBswQDGzQ4vh
+spring.datasource.url=xxxxxxxxxxxxxxx
+spring.datasource.username=xxxxxxxxxxxx
+spring.datasource.password=xxxxxxxxxxxxxx
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
